# reapi

./: .gitattributes  .gitignore  1flfehnf.snx.txt  CMakeLists.txt  README.md  build.gradle  gradle.properties  publish.gradle  reapi_gamedll.inc  settings.gradle  shared.gradle  shared_gcc.gradle  shared_icc.gradle  shared_msvc.gradle  version_script.lds
.github/workflows/: build.yml
buildSrc/: build.gradle
buildSrc/src/main/groovy/gradlecpp/: VelocityUtils.groovy
buildSrc/src/main/groovy/versioning/: GitInfo.groovy  GitVersioner.groovy  ReapiVersionInfo.groovy
gradle/wrapper/: gradle-wrapper.properties
msvc/: reapi.sln
reapi/: CMakeLists.txt  build.gradle
reapi/common/: info.cpp  info.h
reapi/extra/amxmodx/scripting/: message_test.sma  reapi_test.sma
reapi/extra/amxmodx/scripting/include/: cssdk_const.inc  hlsdk_const.inc  reapi.inc  reapi_addons.inc  reapi_const.inc  reapi_engine.inc  reapi_engine_const.inc  reapi_gamedll.inc  reapi_gamedll_const.inc  reapi_misc.inc  reapi_rechecker.inc  reapi_reunion.inc  reapi_vtc.inc
reapi/include/: com_client.h  com_delta_packet.h  com_net.h  com_progdefs.h  rechecker_api.h  reunion_api.h  typedef_strong.h  vtc_api.h
reapi/include/cssdk/common/: const.h  cvardef.h
reapi/include/cssdk/dlls/: airtank.h  ammo.h  basemonster.h  bmodels.h  buttons.h  cbase.h  cdll_dll.h  doors.h  effects.h  explode.h  extdll.h  func_break.h  func_tank.h  gamerules.h  gib.h  h_battery.h  h_cycler.h  healthkit.h  items.h  lights.h  mapinfo.h  maprules.h  monsters.h  mortar.h  osconfig.h  pathcorner.h  plats.h  player.h  regamedll_api.h  regamedll_interfaces.h  saverestore.h  sound.h  subs.h  training_gamerules.h  trains.h  triggers.h  util.h  vehicle.h  weapons.h  weapontype.h
reapi/include/cssdk/dlls/API/: CSEntity.h  CSPlayer.h  CSPlayerItem.h  CSPlayerWeapon.h
reapi/include/cssdk/dlls/hostage/: hostage.h
reapi/include/cssdk/engine/: custom.h  eiface.h  maintypes.h  rehlds_api.h  rehlds_interfaces.h
reapi/include/cssdk/game_shared/: voice_gamemgr.h
reapi/include/cssdk/public/: FileSystem.h  interface.cpp  interface.h  utlmemory.h
reapi/include/cssdk/public/tier0/: dbg.cpp  dbg.h  platform.h
reapi/include/metamod/: dllapi.h  engine_api.h  enginecallbacks.h  h_export.h  log_meta.h  meta_api.h  mhook.h  mreg.h  mutil.h  osdep.h  plinfo.h  sdk_util.h  types_meta.h
reapi/lib/linux32/: libgcc_s.so.1
reapi/msvc/: PostBuild.bat  PreBuild.bat  reapi.def  reapi.rc  reapi.vcxproj  reapi.vcxproj.filters  resource.h
reapi/src/: amx_hook.cpp  amx_hook.h  amxxmodule.cpp  amxxmodule.h  api_config.cpp  api_config.h  dllapi.cpp  engine_api.cpp  entity_callback.cpp  entity_callback.h  entity_callback_dispatcher.cpp  entity_callback_dispatcher.h  h_export.cpp  hook_callback.cpp  hook_callback.h  hook_list.cpp  hook_list.h  hook_manager.cpp  hook_manager.h  hook_message_manager.cpp  hook_message_manager.h  main.cpp  main.h  member_list.cpp  member_list.h  meta_api.cpp  mod_regamedll_api.cpp  mod_regamedll_api.h  mod_rehlds_api.cpp  natives.cpp  natives.h  natives_hookchains.cpp  natives_member.cpp  natives_members.cpp  natives_misc.cpp  natives_misc.h  platform.h  precompiled.h  reapi_utils.cpp  reapi_utils.h  (+3 more)
reapi/src/mods/: mod_rechecker_api.cpp  mod_rechecker_api.h  mod_regamedll_api.cpp  mod_regamedll_api.h  mod_rehlds_api.cpp  mod_rehlds_api.h  mod_reunion_api.cpp  mod_reunion_api.h  mod_vtc_api.cpp  mod_vtc_api.h  queryfile_handler.cpp  queryfile_handler.h
reapi/src/natives/: natives_addons.cpp  natives_addons.h  natives_common.cpp  natives_common.h  natives_helper.h  natives_hookchains.cpp  natives_hookchains.h  natives_hookmessage.cpp  natives_hookmessage.h  natives_members.cpp  natives_members.h  natives_misc.cpp  natives_misc.h  natives_rechecker.cpp  natives_rechecker.h  natives_reunion.cpp  natives_reunion.h  natives_vtc.cpp  natives_vtc.h
reapi/version/: appversion.bat  appversion.sh  appversion.vm  reapi_version.vm  version.h
reapi/version/msvc/: version.vcxproj  version.vcxproj.filters
